[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/images/iconsclasses/Master.png" type="Texture" id=1]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/panel_simpleclass.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainBig.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/gui/universal/skill_frame.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Themes_v2/SimpleBgPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=9]
[ext_resource path="res://gui_modules/CharacterInfo/ClassInformationPanel.gd" type="Script" id=10]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=11]
[ext_resource path="res://assets/images/gui/universal/skill_frame_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/universal/skill_frame_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=14]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/CheckBox.tres" type="Theme" id=15]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_List_Buttons.tres" type="Theme" id=16]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_CLASSES.tres" type="Theme" id=17]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/DecorButton.tres" type="Theme" id=18]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/panel_slavedetails.png" type="Texture" id=19]
[ext_resource path="res://assets/images/iconsclasses/Sex_Toy.png" type="Texture" id=20]
[ext_resource path="res://gui_modules/CharacterInfo/SlaveClassesModule.gd" type="Script" id=21]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/ClassInfoPanel.tres" type="StyleBox" id=22]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle2.tres" type="DynamicFont" id=23]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/SlaveBodyModule_panel.tres" type="StyleBox" id=24]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_weapon_hover.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_all.png" type="Texture" id=26]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_all_hover.png" type="Texture" id=27]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_all_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_weapon_pressed.png" type="Texture" id=29]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage_pressed.png" type="Texture" id=30]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_support_pressed.png" type="Texture" id=31]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_aoe.png" type="Texture" id=32]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_aoe_hover.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_aoe_pressed.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_support_hover.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_heal.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_heal_hover.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_weapon.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_heal_pressed.png" type="Texture" id=40]
[ext_resource path="res://assets/images/iconsskills/abuse.png" type="Texture" id=41]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_magicdamage_hover.png" type="Texture" id=42]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_support.png" type="Texture" id=43]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24.tres" type="DynamicFont" id=44]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_18_special.tres" type="DynamicFont" id=45]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO/frame_charinfoskills.png" type="Texture" id=46]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/SkillTooltip_panel.tres" type="StyleBox" id=47]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_36.tres" type="DynamicFont" id=48]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_hover.png" type="Texture" id=49]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor.png" type="Texture" id=50]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_pressed.png" type="Texture" id=51]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=52]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_cooldown.png" type="Texture" id=53]
[ext_resource path="res://assets/Textures_v2/CLASS_INFO/Skills Icons/icon_usagecost.png" type="Texture" id=54]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_decor_disabled.png" type="Texture" id=55]
[ext_resource path="res://assets/images/gui/universal/skill_frame_learned.png" type="Texture" id=56]
[ext_resource path="res://gui_modules/CharacterInfo/StatsTradingMansion.tscn" type="PackedScene" id=57]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 970, 920 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="SlaveDetailsModule" type="Panel"]
light_mask = 0
margin_right = 970.0
margin_bottom = 920.0
theme = ExtResource( 17 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 970, 920 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="categories" type="VBoxContainer" parent="."]
light_mask = 0
margin_left = 33.2982
margin_top = 64.0
margin_right = 143.298
margin_bottom = 478.0
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="Button" parent="categories"]
light_mask = 0
margin_right = 109.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "All"

[node name="social" type="Button" parent="categories"]
light_mask = 0
margin_top = 44.0
margin_right = 109.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Soc"

[node name="labor" type="Button" parent="categories"]
light_mask = 0
margin_top = 88.0
margin_right = 109.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Lab"

[node name="sexual" type="Button" parent="categories"]
light_mask = 0
margin_top = 132.0
margin_right = 109.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Sex"

[node name="combat" type="Button" parent="categories"]
light_mask = 0
margin_top = 176.0
margin_right = 109.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Com"

[node name="magic" type="Button" parent="categories"]
light_mask = 0
margin_top = 220.0
margin_right = 109.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Magic"
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
toggle_mode = true
text = "Mag"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
light_mask = 0
margin_left = 159.842
margin_top = 64.0
margin_right = 909.842
margin_bottom = 814.0
rect_min_size = Vector2( 0, 760 )
theme = ExtResource( 11 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
light_mask = 0
columns = 5

[node name="Button" type="TextureButton" parent="ScrollContainer/GridContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 20 )
expand = true

[node name="name" type="Label" parent="ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 4.0
margin_top = 114.0
margin_right = 146.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
light_mask = 0
margin_left = 2.0
margin_top = 12.0
margin_right = 968.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Classes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
light_mask = 0
margin_left = 806.923
margin_top = 841.409
margin_right = 931.923
margin_bottom = 882.409
theme = ExtResource( 15 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Locked"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassPanel" type="Panel" parent="."]
visible = false
light_mask = 0
margin_left = 970.0
margin_top = -130.0
margin_right = 1670.0
margin_bottom = 920.0
custom_styles/panel = ExtResource( 22 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="ClassPanel"]
show_behind_parent = true
light_mask = 0
margin_left = -2.0
margin_right = 698.0
margin_bottom = 1050.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descript" type="RichTextLabel" parent="ClassPanel"]
light_mask = 0
margin_left = 30.0
margin_top = 754.0
margin_right = 670.0
margin_bottom = 962.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="ClassPanel"]
light_mask = 0
margin_left = 250.0
margin_top = 14.0
margin_right = 694.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ClassPanel"]
show_behind_parent = true
light_mask = 0
margin_top = 2.0
margin_right = 246.0
margin_bottom = 248.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ClassPanel/TextureRect"]
show_behind_parent = true
light_mask = 0
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReqIcons" type="HBoxContainer" parent="ClassPanel"]
margin_left = 17.0
margin_top = 266.0
margin_right = 236.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="ClassPanel/ReqIcons"]
visible = false
margin_right = 50.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reqs" type="RichTextLabel" parent="ClassPanel"]
light_mask = 0
margin_left = 14.0
margin_top = 340.0
margin_right = 246.0
margin_bottom = 528.0
theme = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true

[node name="bonus" type="RichTextLabel" parent="ClassPanel"]
light_mask = 0
margin_left = 262.0
margin_top = 66.0
margin_right = 677.0
margin_bottom = 338.0
theme = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocialSkills" type="ScrollContainer" parent="ClassPanel"]
light_mask = 0
margin_left = 270.0
margin_top = 566.0
margin_right = 668.0
margin_bottom = 666.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ClassPanel/SocialSkills"]
light_mask = 0
margin_right = 398.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="TextureRect" parent="ClassPanel/SocialSkills/HBoxContainer"]
visible = false
light_mask = 0
margin_left = 161.0
margin_right = 236.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ClassPanel/SocialSkills/HBoxContainer/Button"]
light_mask = 0
margin_right = 76.0
margin_bottom = 75.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="CombatSkills" type="ScrollContainer" parent="ClassPanel"]
light_mask = 0
margin_left = 270.0
margin_top = 389.0
margin_right = 668.0
margin_bottom = 489.0
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ClassPanel/CombatSkills"]
light_mask = 0
margin_right = 398.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="TextureRect" parent="ClassPanel/CombatSkills/HBoxContainer"]
visible = false
light_mask = 0
margin_left = 161.0
margin_right = 236.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ClassPanel/CombatSkills/HBoxContainer/Button"]
light_mask = 0
margin_right = 76.0
margin_bottom = 75.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="SocialLabel" type="Label" parent="ClassPanel"]
light_mask = 0
margin_left = 274.0
margin_top = 526.0
margin_right = 666.0
margin_bottom = 558.0
custom_fonts/font = ExtResource( 7 )
text = "Social Skills"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatLabel" type="Label" parent="ClassPanel"]
light_mask = 0
margin_left = 270.0
margin_top = 347.0
margin_right = 668.0
margin_bottom = 379.0
custom_fonts/font = ExtResource( 7 )
text = "Combat Skills"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unlock" type="Button" parent="ClassPanel"]
light_mask = 0
margin_left = 464.0
margin_top = 975.0
margin_right = 670.0
margin_bottom = 1039.0
theme = ExtResource( 18 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Unlock"

[node name="ExpLabel" type="Label" parent="ClassPanel"]
light_mask = 0
margin_left = 30.0
margin_top = 994.0
margin_right = 317.0
margin_bottom = 1021.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
text = "Experience: "

[node name="SkillPanel" type="Panel" parent="."]
margin_left = 970.0
margin_right = 1670.0
margin_bottom = 920.0
custom_styles/panel = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Categories" type="VBoxContainer" parent="SkillPanel"]
margin_left = 25.0
margin_top = 65.0
margin_right = 79.0
margin_bottom = 409.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 28 )
texture_hover = ExtResource( 27 )
expand = true

[node name="combat" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_top = 58.0
margin_right = 54.0
margin_bottom = 112.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
texture_normal = ExtResource( 39 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 25 )
expand = true

[node name="spells" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_top = 116.0
margin_right = 54.0
margin_bottom = 170.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 42 )
expand = true

[node name="support" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_top = 174.0
margin_right = 54.0
margin_bottom = 228.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 31 )
texture_hover = ExtResource( 36 )
expand = true

[node name="aoe" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_top = 232.0
margin_right = 54.0
margin_bottom = 286.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 33 )
expand = true

[node name="heal" type="TextureButton" parent="SkillPanel/Categories"]
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_top = 290.0
margin_right = 54.0
margin_bottom = 344.0
rect_min_size = Vector2( 54, 54 )
toggle_mode = true
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 40 )
texture_hover = ExtResource( 38 )
expand = true

[node name="Label" type="Label" parent="SkillPanel"]
light_mask = 0
margin_top = 12.0
margin_right = 700.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Skills"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="SkillPanel"]
light_mask = 0
margin_left = 95.0
margin_top = 62.0
margin_right = 684.0
margin_bottom = 798.0
rect_min_size = Vector2( 0, 500 )
theme = ExtResource( 11 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SkillPanel/ScrollContainer"]
light_mask = 0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="Button" type="TextureButton" parent="SkillPanel/ScrollContainer/GridContainer"]
visible = false
light_mask = 0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 56 )
expand = true

[node name="icon" type="TextureRect" parent="SkillPanel/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 41 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="SkillPanel/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 6.0
margin_top = 8.0
margin_right = 94.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 45 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skillpoints_label" type="Label" parent="SkillPanel"]
margin_left = 85.0
margin_top = 836.0
margin_right = 617.0
margin_bottom = 880.0
mouse_filter = 1
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
text = "Skill Points: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Panel" parent="."]
visible = false
light_mask = 0
margin_left = 970.0
margin_right = 1670.0
margin_bottom = 420.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltip"]
light_mask = 0
margin_left = 50.0
margin_top = 50.0
margin_right = 650.0
margin_bottom = 370.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.878431, 0.878431, 0.878431, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillTooltip" type="Panel" parent="."]
visible = false
light_mask = 0
margin_left = 375.0
margin_top = 220.0
margin_right = 1075.0
margin_bottom = 570.0
custom_styles/panel = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="SkillTooltip"]
show_behind_parent = true
light_mask = 0
margin_top = -3.19998
margin_right = 700.0
margin_bottom = 346.8
rect_min_size = Vector2( 700, 350 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="SkillTooltip"]
show_behind_parent = true
light_mask = 0
margin_left = 17.5
margin_top = 17.5
margin_right = 117.5
margin_bottom = 117.5
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 41 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_frame" type="TextureRect" parent="SkillTooltip"]
show_behind_parent = true
light_mask = 0
margin_left = 17.5
margin_top = 17.5
margin_right = 117.5
margin_bottom = 117.5
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 46 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="SkillTooltip"]
margin_left = 125.248
margin_top = 5.66177
margin_right = 264.248
margin_bottom = 52.6618
custom_fonts/font = ExtResource( 48 )
custom_colors/font_color = Color( 0.890196, 0.890196, 0.890196, 1 )
text = "Distract"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="Label" parent="SkillTooltip"]
margin_left = 281.495
margin_top = 268.563
margin_right = 420.495
margin_bottom = 315.563
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "0 SP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="req" type="Label" parent="SkillTooltip"]
margin_left = 75.0
margin_top = 136.0
margin_right = 273.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "Requirements"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="req_icon" type="TextureRect" parent="SkillTooltip"]
margin_left = 149.0
margin_top = 180.0
margin_right = 199.0
margin_bottom = 230.0
rect_min_size = Vector2( 50, 50 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="RichTextLabel" parent="SkillTooltip"]
margin_left = 125.0
margin_top = 48.0
margin_right = 676.0
margin_bottom = 117.0
theme = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 44 )
text = "Distract 12-20 dmg text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_cooldown" type="TextureRect" parent="SkillTooltip"]
show_behind_parent = true
light_mask = 0
margin_left = 535.0
margin_top = 170.0
margin_right = 567.0
margin_bottom = 202.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 53 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usage" type="Label" parent="SkillTooltip"]
margin_left = 455.0
margin_top = 162.0
margin_right = 506.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_usage" type="TextureRect" parent="SkillTooltip"]
show_behind_parent = true
light_mask = 0
margin_left = 420.0
margin_top = 170.0
margin_right = 452.0
margin_bottom = 202.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 54 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cooldown" type="Label" parent="SkillTooltip"]
margin_left = 570.0
margin_top = 162.0
margin_right = 621.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel_button" type="TextureButton" parent="SkillTooltip"]
margin_left = 50.0
margin_top = 265.0
margin_right = 260.0
margin_bottom = 323.0
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 51 )
texture_hover = ExtResource( 49 )
texture_disabled = ExtResource( 55 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkillTooltip/cancel_button"]
margin_left = 13.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 52 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "Cancel"
align = 1
valign = 1

[node name="unlock_button" type="TextureButton" parent="SkillTooltip"]
margin_left = 436.0
margin_top = 265.0
margin_right = 646.0
margin_bottom = 323.0
texture_normal = ExtResource( 50 )
texture_pressed = ExtResource( 51 )
texture_hover = ExtResource( 49 )
texture_disabled = ExtResource( 55 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkillTooltip/unlock_button"]
margin_left = 13.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 52 )
custom_colors/font_color = Color( 0.976471, 0.890196, 0.501961, 1 )
text = "Unlock"
align = 1
valign = 1

[node name="UpgradeButton" type="Button" parent="."]
margin_left = 347.253
margin_top = 829.409
margin_right = 555.253
margin_bottom = 893.409
theme = ExtResource( 18 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
text = "Upgrade"

[node name="stats_upgrade" parent="." instance=ExtResource( 57 )]
visible = false
margin_left = 303.824
margin_top = -324.094
margin_right = 683.824
margin_bottom = 379.906
